--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,14 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
+        "laravel/breeze": "^1.29",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "ext-pdo": "*",
         "ext-json": "*",
-        "bit3/git-php": "^1.5"
+        "bit3/git-php": "^1.5",
+        "spatie/laravel-permission": "^6.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -38,7 +40,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Blume\\": "system/core/",
+            "Blume\\": "system/blume/",
             "Database\\Factories\\": "system/database/factories/",
             "Database\\Seeders\\": "system/database/seeders/"
         },
@@ -57,6 +59,7 @@
     },
     "scripts": {
         "post-autoload-dump": [
+            "@php system/artisan blume:discover",
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php system/artisan package:discover --ansi"
         ],
